--- a/css/main.css
+++ b/css/main.css
@@ -46,8 +46,7 @@ h6 {
 
 .main {
     max-width: 1800px;
-    margin: auto;
-    margin: var(--sm);
+    margin: 0 auto;
     padding-bottom: var(--xs);
 }
 
