--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,47 @@ h6 {
     border-radius: 5px;
 }
 
+/* Win */
+.win {
+    display: none;
+    max-width: 1800px;
+    margin: 0 auto;
+    padding-bottom: var(--xs);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.win img {
+    width: 150px;
+}
+
+.win .button-win {
+    display: block;
+    margin: var(--sm) auto;
+    padding: var(--xs) var(--lg);
+    background-color: var(--green-hard);
+    border: 2px solid var(--green);
+    border-radius: var(--xs);
+}
+
+.win .button-win .button-link {
+    font-size: var(--lg);
+    font-weight: 600;
+    color: var(--white);
+    text-decoration: none;
+}
+
+.win .button-win:hover {
+    background-color: var(--green);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    transition: .3s all;
+}
+
+.win .button-win:hover .button-link {
+    color: var(--green-hard);
+}
+
 @media screen and (min-width: 768px) {
     /* Map Section */
     .map-content {
@@ -293,6 +334,17 @@ h6 {
     #mapCanvas {
         width: 500px;
         height: 500px;
+    }
+
+    /* Battle */
+
+    .battle-content {
+        width: 500px;
+        height: 500px;
+    }
+
+    .battle-content img {
+        width: 150px;
     }
 }
 
